<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="csm117.whatshappening.InputActivity">
    <EditText android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:inputType="text"
        android:hint="@string/edit_message" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/button_send"
        android:onClick="sendMessage"
        android:layout_alignBottom="@+id/edit_message" />

    <TextView android:id="@+id/latText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_message" />

    <EditText android:id="@+id/latValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/latText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="number"
        android:text="@string/fakelatValue"/>

    <TextView android:id="@+id/longText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longText"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/latValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText android:id="@+id/longValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_below="@+id/longText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="number"
        android:text="@string/fakelongValue"/>

</RelativeLayout>
